--- a/templates/vhost/vhost_ssl_footer.j2
+++ b/templates/vhost/vhost_ssl_footer.j2
@@ -1,11 +1,24 @@
-{% if nginx_include_files -%}
+{% if nginx_include_files %}
 {% for file in nginx_include_files %}
   include {{ file }};
 {% endfor %}
-{% endif -%}
+{% end -%}
 
 {% if nginx_vhost_cfg_append -%}
 {% for key,value in nginx_vhost_cfg_append|dictsort %}
+{# NOTE: value may only be a string or a list #}
+{% if value is not string and value is iterable%}
+{% for asubvalue in value %}
+  {{ key }} {{ asubvalue }};
+{% endfor %}
+{% else %}
+  {{ key }} {{ value }};
+{% endif %}
+{% endfor %}
+{% endif -%}
+
+{% if nginx_vhost_cfg_ssl_append -%}
+{% for key,value in nginx_vhost_cfg_ssl_append|dictsort %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
