--- a/templates/conf.d/nginx.conf.j2
+++ b/templates/conf.d/nginx.conf.j2
@@ -1,17 +1,17 @@
-{% if nginx_super_user -%}
+{% if nginx_super_user %}
 user {{ nginx_user }};
-{% endif -%}
+{% endif %}
 worker_processes {{ nginx_worker_processes }};
-{% if nginx_worker_rlimit_nofile -%}
+{% if nginx_worker_rlimit_nofile %}
 worker_rlimit_nofile {{ nginx_worker_rlimit_nofile }};
-{% endif -%}
+{% endif %}
 
-{% if nginx_pid_file -%}
+{% if nginx_pid_file %}
 pid        {{ nginx_pid_file }};
-{% endif -%}
+{% endif %}
 error_log  {{ nginx_nginx_error_log }};
 
-{% if nginx_nginx_cfg_prepend -%}
+{% if nginx_nginx_cfg_prepend %}
 {% set field_width = nginx_nginx_cfg_prepend.keys()|map('length')|max %}
 {% for key,value in nginx_nginx_cfg_prepend|dictsort %}
 {% if value is not string and value is iterable%}
@@ -22,16 +22,16 @@ error_log  {{ nginx_nginx_error_log }};
 {{ key.ljust(field_width) }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
+{% endif %}
 
 events {
-  worker_connections {{ nginx_worker_connections -%};
-  {%- if nginx_multi_accept == 'on' -%}
+  worker_connections {{ nginx_worker_connections }};
+{% if nginx_multi_accept == 'on' %}
     multi_accept on;
-  {%- endif -%}
-  {%- if nginx_events_use -%}
+{% endif %}
+{% if nginx_events_use %}
     use {{ nginx_events_use }};
-  {%- endif -%}
+{% endif %}
 }
 
 http {
@@ -41,104 +41,102 @@ http {
 {% for key,value in nginx_log_format|dictsort %}
   log_format {{ key }} '{{ value }}';
 {% endfor %}
-{% endif -%}
-
+{% endif %}
   access_log  {{ nginx_http_access_log }};
-
-{% if nginx_sendfile == 'on' -%}
+{% if nginx_sendfile == 'on' %}
   sendfile    on;
-  {%- if nginx_http_tcp_nopush == 'on' -%}
+{% if nginx_http_tcp_nopush == 'on' %}
   tcp_nopush on;
-  {%- endif -%}
-{% endif -%}
+{% endif %}
+{% endif %}
 
   server_tokens {{ nginx_server_tokens }};
-
-  types_hash_max_size {{ nginx_types_hash_max_size }};
+  types_hash_max_size    {{ nginx_types_hash_max_size }};
   types_hash_bucket_size {{ nginx_types_hash_bucket_size }};
 
   server_names_hash_bucket_size {{ nginx_names_hash_bucket_size }};
-  server_names_hash_max_size {{ nginx_names_hash_max_size }};
+  server_names_hash_max_size    {{ nginx_names_hash_max_size }};
 
   keepalive_timeout  {{ nginx_keepalive_timeout }};
   tcp_nodelay        {{ nginx_http_tcp_nodelay }};
 
-{% if nginx_gzip == 'on' -%}
+{% if nginx_gzip == 'on' %}
   gzip              on;
-{% if nginx_gzip_buffers -%}
+{% if nginx_gzip_buffers %}
   gzip_buffers      {{ nginx_gzip_buffers }};
-{% endif -%}
+{% endif %}
   gzip_comp_level   {{ nginx_gzip_comp_level }};
-{% if nginx_gzip_disable -%}
+{% if nginx_gzip_disable %}
   gzip_disable      {{ nginx_gzip_disable }};
-{% endif -%}
+{% endif %}
   gzip_min_length   {{ nginx_gzip_min_length }};
   gzip_http_version {{ nginx_gzip_http_version }};
-{% if nginx_gzip_proxied -%}
+{% if nginx_gzip_proxied %}
   gzip_proxied      {{ nginx_gzip_proxied }};
-{% endif -%}
+{% endif %}
 {% if nginx_gzip_types is not string and nginx_gzip_types is iterable %}
-  gzip_types        {{ nginx_gzip_types|join(' ') }};
+  gzip_types        "{{ nginx_gzip_types|join(' ') }}";
 {% else %}
   gzip_types        {{ nginx_gzip_types }};
 {% endif %}
   gzip_vary         {{ nginx_gzip_vary }};
-{% endif -%}
+{% endif %}
 
-{% if nginx_client_body_temp_path -%}
+{% if nginx_client_body_temp_path %}
   client_body_temp_path   {{ nginx_client_body_temp_path }};
-{% endif -%}
-{% if nginx_client_max_body_size -%}
+{% endif %}
+{% if nginx_client_max_body_size %}
   client_max_body_size    {{ nginx_client_max_body_size }};
-{% endif -%}
-{% if nginx_client_body_buffer_size -%}
+{% endif %}
+{% if nginx_client_body_buffer_size %}
   client_body_buffer_size {{ nginx_client_body_buffer_size }};
-{% endif -%}
-{% if nginx_proxy_redirect -%}
+{% endif %}
+
+{% if nginx_proxy_redirect %}
   proxy_redirect          {{ nginx_proxy_redirect }};
-{% endif -%}
-{% if nginx_proxy_temp_path -%}
+{% endif %}
+{% if nginx_proxy_temp_path %}
   proxy_temp_path         {{ nginx_proxy_temp_path }};
-{% endif -%}
-{% if nginx_proxy_connect_timeout -%}
+{% endif %}
+{% if nginx_proxy_connect_timeout %}
   proxy_connect_timeout   {{ nginx_proxy_connect_timeout }};
-{% endif -%}
-{% if nginx_proxy_send_timeout -%}
+{% endif %}
+{% if nginx_proxy_send_timeout %}
   proxy_send_timeout      {{ nginx_proxy_send_timeout }};
-{% endif -%}
-{% if nginx_proxy_read_timeout -%}
+{% endif %}
+{% if nginx_proxy_read_timeout %}
   proxy_read_timeout      {{ nginx_proxy_read_timeout }};
-{% endif -%}
-{% if nginx_proxy_buffers -%}
+{% endif %}
+{% if nginx_proxy_buffers %}
   proxy_buffers           {{ nginx_proxy_buffers }};
-{% endif -%}
-{% if nginx_proxy_buffer_size -%}
+{% endif %}
+{% if nginx_proxy_buffer_size %}
   proxy_buffer_size       {{ nginx_proxy_buffer_size }};
-{% endif -%}
-{% if nginx_proxy_http_version -%}
+{% endif %}
+{% if nginx_proxy_http_version %}
   proxy_http_version      {{ nginx_proxy_http_version }};
-{% endif -%}
-{% for header in nginx_proxy_set_header -%}
+{% endif %}
+{% for header in nginx_proxy_set_header %}
   proxy_set_header        {{ header }};
-{% endfor -%}}
-{% if nginx_proxy_headers_hash_bucket_size -%}
+{% endfor %}
+{% if nginx_proxy_headers_hash_bucket_size %}
   proxy_headers_hash_bucket_size {{ nginx_proxy_headers_hash_bucket_size }};
-{% endif -%}
-{% if nginx_proxy_cache_path -%}
+{% endif %}
+{% if nginx_proxy_cache_path %}
   proxy_cache_path        {{ nginx_proxy_cache_path }} levels={{ nginx_proxy_cache_levels }} keys_zone={{ nginx_proxy_cache_keys_zone }} max_size={{ nginx_proxy_cache_max_size }} inactive={{ nginx_proxy_cache_inactive }};
 
-{% endif -%}
-{% if nginx_fastcgi_cache_path -%}
+{% endif %}
+{% if nginx_fastcgi_cache_path %}
   fastcgi_cache_path    	{{ nginx_fastcgi_cache_path }} levels={{ nginx_fastcgi_cache_levels }} keys_zone={{ nginx_fastcgi_cache_keys_zone }} max_size={{ nginx_fastcgi_cache_max_size }} inactive={{ nginx_fastcgi_cache_inactive }};
-{% endif -%}
-{% if nginx_fastcgi_cache_key -%}
+{% endif %}
+{% if nginx_fastcgi_cache_key %}
   fastcgi_cache_key		    {{ nginx_fastcgi_cache_key }};
-{% endif -%}
-{% if nginx_fastcgi_cache_use_stale -%}
+{% endif %}
+{% if nginx_fastcgi_cache_use_stale %}
   fastcgi_cache_use_stale {{ nginx_fastcgi_cache_use_stale }};
-{% endif -%}
+{% endif %}
 
-{% if nginx_http_cfg_append -%}
+{% if nginx_http_cfg_append %}
 {% set field_width = nginx_http_cfg_append.keys()|map('length')|max %}
 {% for key,value in nginx_http_cfg_append|dictsort %}
 {% if value is not string and value is iterable%}
@@ -149,13 +147,13 @@ http {
   {{ key.ljust(field_width) }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
+{% endif %}
 
   include {{ nginx_conf_dir }}/conf.d/*.conf;
   include {{ nginx_conf_dir }}/sites-enabled/*;
 }
-{% if nginx_mail -%}
+{% if nginx_mail %}
 mail {
   include {{ nginx_conf_dir }}/conf.mail.d/*.conf;
 }
-{% endif -%}
+{% endif %}
