--- a/templates/vhost/locations/alias.j2
+++ b/templates/vhost/locations/alias.j2
@@ -1,4 +1,4 @@
-    alias {{ nginx_location_alias }};
-{% if nginx_autoindex is defined -%}
-    autoindex {{ nginx_autoindex }};
-{% endif -%}
+    alias {{ item.location_alias }};
+{% if item.autoindex|default(false) %}
+    autoindex {{ item.autoindex }};
+{% endif %}
