--- a/templates/vhost/location_footer.j2
+++ b/templates/vhost/location_footer.j2
@@ -1,5 +1,5 @@
-{% if nginx_location_cfg_append -%}
-{% for key,value in nginx_location_cfg_append|dictsort %}
+{% if item.location_cfg_append|default(false) %}
+{% for key,value in item.location_cfg_append|dictsort %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
@@ -9,10 +9,10 @@
     {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
+{% endif %}
 
-{% if nginx_location_custom_cfg_append -%}
-{% for key,value in nginx_location_custom_cfg_append.iteritems() %}
+{% if item.location_custom_cfg_append|default(false) %}
+{% for key,value in item.location_custom_cfg_append.iteritems() %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
@@ -22,16 +22,16 @@
     {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
-{% if nginx_raw_append is not defined and nginx_raw_append|default([])|count > 0 %}
-{% for line in nginx_raw_append %}
+{% endif %}
+{% if item.raw_append|default(false) and item.raw_append|default([])|count > 0 %}
+{% for line in item.raw_append %}
     {{ line }}
 {% endfor %}
 {% endif %}
 
-{% if nginx_include -%}
-{% for include_file in nginx_include -%}
+{% if item.include|default(false) %}
+{% for include_file in item.include %}
     include {{ include_file }};
-{% endfor -%}
-{% endif -%}
+{% endfor %}
+{% endif %}
   }
