--- a/templates/vhost/vhost_footer.j2
+++ b/templates/vhost/vhost_footer.j2
@@ -1,11 +1,11 @@
-{% if nginx_include_files -%}
-{% for file in nginx_include_files %}
+{% if item.include_files|default(false) %}
+{% for file in item.include_files %}
   include {{ file }};
 {% endfor %}
-{% endif -%}
+{% endif %}
 
-{% if nginx_vhost_cfg_append -%}
-{% for key,value in nginx_vhost_cfg_append|dictsort %}
+{% if item.vhost_cfg_append|default(false) %}
+{% for key,value in item.vhost_cfg_append|dictsort %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
@@ -17,7 +17,9 @@
 {% endfor %}
 {% endif -%}
 
-{% for line in nginx_raw_append -%}
+{% if item.location_raw_append|default(false) and item.location_raw_append is iterable%}
+{% for line in item.location_raw_append -%}
   {{ line }}
 {% endfor -%}
+{% endif -%}
 }
