--- a/templates/mailhost/mailhost_ssl.j2
+++ b/templates/mailhost/mailhost_ssl.j2
@@ -1,34 +1,47 @@
+{# *** [START] set _listen_options *** #}
+{% if item.listen_options|default(false) %}
+{% set _listen_options = ' ' + item.listen_options %}
+{% else %}
+{% set _listen_options = '' %}
+{% endif %}
+{% if item.ipv6_listen_options|default(false) %}
+{% set _ipv6_listen_options = ' ' + item.ipv6_listen_options %}
+{% else %}
+{% set _ipv6_listen_options = '' %}
+{% endif %}
+{# *** [END] set _listen_options *** #}
 
 server {
-{# Note: the value of nginx_listen_ip should be a list or a string #}
-{% if nginx_mailhost_listen_ip is not string and nginx_mailhost_listen_ip is iterable -%}
-{% for ip in nginx_mailhost_listen_ip %}
-  listen    {{ ip }}:{{ nginx_mailhost_ssl_port }};
+{# Note: the value of item.listen_ip should be a list or a string #}
+{% if item.listen_ip|default('*') is not string and item.listen_ip is iterable %}
+{% for ip in item.listen_ip %}
+  listen {{ ip }}:{{ item.listen_port }};
 {% endfor %}
 {% else %}
-  listen    {{ nginx_mailhost_listen_ip|default('*') }}:{{ nginx_mailhost_ssl_port }};
-{% endif -%}
+  listen {{ item.listen_ip|default('*') }}:{{ item.listen_port }}{{ _listen_options }};
+{% endif %}
 
 {# check to see if ipv6 support exists in the kernel before applying #}
-{% if nginx_mailhost_ipv6_enable and (ansible_default_ipv6.address is defined) -%}
-{# Note: the value of nginx_mailhost_ipv6_listen_ip should be a list or a string #}
-{% if nginx_mailhost_ipv6_listen_ip is not string and nginx_mailhost_ipv6_listen_ip is iterable -%}
-{% for ipv6 in nginx_mailhost_ipv6_listen_ip %}
-  listen [{{ ipv6 }}]:{{ nginx_mailhost_ipv6_ssl_port }} {{ nginx_mailhost_ipv6_listen_options|default('') }};
+{% if item.ipv6_enable|default(false) and (ansible_default_ipv6.address is defined) %}
+{# Note: the value of item.ipv6_listen_ip should be a list or a string #}
+{% if item.ipv6_listen_ip|default('::') is not string and item.ipv6_listen_ip is iterable %}
+{% for ipv6 in item.ipv6_listen_ip %}
+  listen [{{ ipv6 }}]:{{ item.ipv6_listen_port }}{{ _ipv6_listen_options }};
 {% endfor %}
 {% else %}
-  listen [{{ nginx_mailhost_ipv6_listen_ip|default('::') }}]:{{ nginx_mailhost_ipv6_ssl_port }} {{ nginx_mailhost_ipv6_listen_options|default('') }};
-{% endif -%}
-{% endif -%}
+  listen [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ipv6_listen_port }}{{ _ipv6_listen_options }};
+{% endif %}
+{% endif %}
+======
 
-  server_name           {{ nginx_mailhost_server_name.join(" ") }};
-  protocol              {{ nginx_mailhost_protocol }};
-  xclient               {{ nginx_mailhost_xclient }};
-  auth_http             {{ nginx_mailhost_auth_http }};
+  server_name           {{ item.server_name|join(" ") }};
+  protocol              {{ item.protocol }};
+  xclient               {{ item.xclient }};
+  auth_http             {{ item.auth_http }};
 
   ssl on;
-  ssl_certificate      {{ nginx_mailhost_ssl_cert }};
-  ssl_certificate_key  {{ nginx_mailhost_ssl_key }};
+  ssl_certificate      {{ item.ssl_cert }};
+  ssl_certificate_key  {{ item.ssl_key }};
 
   ssl_session_timeout  5m;
 
