[OI] Add default values for fastcgi_params_file and uwsgi_params_file variables

--- a/templates/vhost/locations/uwsgi.j2
+++ b/templates/vhost/locations/uwsgi.j2
@@ -4,5 +4,5 @@
 {% if item.try_files|default(false) %}
     try_files {{ item.try_files|join(' ') }};
 {% endif %}
-    include {{ item.uwsgi_params_file }};
+    include {{ item.uwsgi_params_file|default(nginx_uwsgi_params_file) }};
     uwsgi_pass {{ item.uwsgi_pass }};
