--- a/templates/vhost/locations/fastcgi.j2
+++ b/templates/vhost/locations/fastcgi.j2
@@ -1,7 +1,7 @@
 {% if item.www_root|default(false) %}
     root          {{ item.www_root }};
 {% endif %}
-    include       {{ item.fastcgi_params_file }};
+    include       {{ item.fastcgi_params_file|default(nginx_fastcgi_params_file) }};
 {% if nginx_try_files|default(false) %}
     try_files    {{ item.try_files|join(' ') }};
 {% endif %}
