--- a/templates/vhost/vhost_ssl_header.j2
+++ b/templates/vhost/vhost_ssl_header.j2
@@ -1,104 +1,148 @@
+{# *** [START] set _listen_options *** #}
+{% set _listen_options = '' %}
+{% if item.listen_options|default(false) %}
+{% set _listen_options = ' ' + item.listen_options %}
+{% endif -%}
+
+{% set _ipv6_listen_options = '' %}
+{% if item.ipv6_listen_options|default(false) %}
+{% set _ipv6_listen_options = ' ' + item.ipv6_listen_options %}
+{% endif -%}
+{# *** [END] set _listen_options *** #}
+
+{# *** [START] set _ssl and _spdy *** #}
+{% set _ssl_listen_option = '' %}
+{% if item.ssl_listen_options|default(false) %}
+{% set _ssl_listen_option = ' ssl' %}
+{% endif -%}
+
+{% set _spdy_listen_option = '' %}
+{% if item.spdy|default(false) %}
+{% set _spdy_listen_option = ' spdy' %}
+{% endif -%}
+{# *** [END] set _ssl and _spdy *** #}
+
 {# WARNING: This file needs refactoring to address scope.function_template lines #}
 
-{% if nginx_rewrite_www_to_non_www -%}
+{% if item.rewrite_www_to_non_www|default(false) %}
 server {
-{# Note: the value of nginx_listen_ip should be a list or a string #}
-{% if nginx_listen_ip is not string and nginx_listen_ip is iterable -%}
-{% for ip in nginx_listen_ip %}
-  listen       {{ ip }}:{{ nginx_ssl_port }} {% if nginx_ssl_listen_option %}ssl{% endif %}{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_listen_options|default('') }};
+{# Note: the value of item.listen_ip should be a list or a string #}
+{% if item.listen_ip|default('*') is not string and item.listen_ip is iterable -%}
+{% for ip in item.listen_ip %}
+  listen  {{ ip }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endfor %}
 {% else %}
-  listen       {{ nginx_listen_ip|default('*') }}:{{ nginx_ssl_port }} {% if nginx_ssl_listen_option %}ssl{% endif %}{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_listen_options|default('') }};
-{% endif -%}
+  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+{% endif %}
 
 {# check to see if ipv6 support exists in the kernel before applying #}
-{% if nginx_ipv6_enable and (ansible_default_ipv6.address is defined) -%}
-{# Note: the value of nginx_ipv6_listen_ip should be a list or a string #}
-{% if nginx_ipv6_listen_ip is not string and nginx_ipv6_listen_ip is iterable -%}
-{% for ipv6 in nginx_ipv6_listen_ip %}
-  listen       [{{ ipv6 }}]:{{ nginx_ssl_port }} ssl{% if nginx_spdy == 'on' %} spdy{% endif %}{{ nginx_ipv6_listen_options|default('') }};
+{% if item.ipv6_enable|default(false) and (ansible_default_ipv6.address is defined) -%}
+{# Note: the value of item.ipv6_listen_ip should be a list or a string #}
+{% if item.ipv6_listen_ip|default('::') is not string and item.ipv6_listen_ip is iterable -%}
+{% for ipv6 in item.ipv6_listen_ip %}
+  listen  [{{ ipv6 }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endfor %}
 {% else %}
-  listen       [{{ nginx_ipv6_listen_ip|default('::') }}]:{{ nginx_ssl_port }} ssl{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_ipv6_listen_options|default('') }};
-{% endif -%}
-{% endif -%}
-  server_name  www.{{ nginx_server_name[0].gsub(/^www\./, '') }};
-  return       301 https://{{ nginx_server_name[0].gsub(/^www\./, '') }}$request_uri;
+  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+{% endif %}
+{% endif %}
+{% if item.server_name|default(false) %}
+  server_name  www.{{ item.server_name[0]|regex_replace('^www.', '') }};
+{% endif %}
+  return       301 https://{{ item.server_name[0]|regex_replace('^www.', '') }}$request_uri;
 
-## OGONNA REVISIT THIS
-{{ scope.function_template(["nginx/vhost/vhost_ssl_settings.erb"]) }}
-## OGONNA REVISIT THIS
+{% include 'vhost_ssl_settings.j2' ignore missing %}
 
 }
 
-{% end -%}
+{% endif %}
 
 server {
-{# Note: the value of nginx_listen_ip should be a list or a string #}
-{% if nginx_listen_ip is not string and nginx_listen_ip is iterable -%}
-{% for ip in nginx_listen_ip %}
-  listen       {{ ip }}:{{ nginx_ssl_port }} {% if nginx_ssl_listen_option %}ssl{% endif %}{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_listen_options|default('') }};
+{# Note: the value of item.listen_ip should be a list or a string #}
+{% if item.listen_ip|default('*') is not string and item.listen_ip is iterable -%}
+{% for ip in item.listen_ip %}
+  listen  {{ ip }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
 {% endfor %}
 {% else %}
-  listen       {{ nginx_listen_ip|default('*') }}:{{ nginx_ssl_port }} {% if nginx_ssl_listen_option %}ssl{% endif %}{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_listen_options|default('') }};
-{% endif -%}
+  listen  {{ item.listen_ip|default('*') }}:{{ item.ssl_port }}{{ _ssl_listen_option }}{{ _spdy_listen_option }}{{ _listen_options }};
+{% endif %}
 
 {# check to see if ipv6 support exists in the kernel before applying #}
-{% if nginx_ipv6_enable and (ansible_default_ipv6.address is defined) -%}
-{# Note: the value of nginx_ipv6_listen_ip should be a list or a string #}
-{% if nginx_ipv6_listen_ip is not string and nginx_ipv6_listen_ip is iterable -%}
-{% for ipv6 in nginx_ipv6_listen_ip %}
-  listen       [{{ ipv6 }}]:{{ nginx_ssl_port }} ssl{% if nginx_spdy == 'on' %} spdy{% endif %}{{ nginx_ipv6_listen_options|default('') }};
+{% if item.ipv6_enable|default(false) and (ansible_default_ipv6.address is defined) -%}
+{# Note: the value of item.ipv6_listen_ip should be a list or a string #}
+{% if item.ipv6_listen_ip|default('::') is not string and item.ipv6_listen_ip is iterable -%}
+{% for ipv6 in item.ipv6_listen_ip %}
+  listen  [{{ ipv6 }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
 {% endfor %}
 {% else %}
-  listen       [{{ nginx_ipv6_listen_ip|default('::') }}]:{{ nginx_ssl_port }} ssl{% if nginx_spdy == 'on' %} spdy{% endif %} {{ nginx_ipv6_listen_options|default('') }};
-{% endif -%}
-{% endif -%}
-  server_name  {{ nginx_rewrite_www_to_non_www ? nginx_server_name[0].gsub(/^www\./, '') : nginx_server_name.join(" ") }};
+  listen  [{{ item.ipv6_listen_ip|default('::') }}]:{{ item.ssl_port }} ssl{{ _spdy_listen_option }}{{ _ipv6_listen_options }};
+{% endif %}
+{% endif %}
+{% if item.server_name|default(false) %}
+{% if item.rewrite_www_to_non_www|default(false) %}
+  server_name  {{ item.server_name[0]|regex_replace('^www.', '') }};
+{% else %}
+  server_name  {{ item.server_name|join(" ") }};
+{% endif %}
+{% endif %}
 
-## OGONNA REVISIT THIS
-{{ scope.function_template(["nginx/vhost/vhost_ssl_settings.erb"]) }}
-## OGONNA REVISIT THIS
+{% include 'vhost_ssl_settings.j2' ignore missing %}
 
-{% if nginx_maintenance -%}
-  {{ nginx_maintenance_value }};
-{% endif -%}
+{% if item.maintenance|default(false) %}
+  {{ item.maintenance_value }};
+{% endif %}
 
 
-{% if nginx_resolver|default([])|count > 0 -%}
-  resolver                  {{ nginx_resolver|join(' ') }};
-{% endif -%}
+{% if item.resolver|default([])|count > 0 %}
+  resolver             {{ item.resolver|join(' ') }};
+{% endif %}
 
-{% if nginx_auth_basic is defined and nginx_auth_basic -%}
-  auth_basic           "{{ nginx_auth_basic }}";
-{% endif -%}
-{% if nginx_auth_basic_user_file is defined and nginx_auth_basic_user_file -%}
-  auth_basic_user_file      {{ nginx_auth_basic_user_file }};
-{% endif -%}
+{% if item.auth_basic|default(false) %}
+  auth_basic           "{{ item.auth_basic }}";
+{% endif %}
+{% if item.auth_basic_user_file|default(false) %}
+  auth_basic_user_file      {{ item.auth_basic_user_file }};
+{% endif %}
 
-{% if nginx_client_body_timeout is defined and nginx_client_body_timeout -%}
-  client_body_timeout {{ nginx_client_body_timeout }};
-{% endif -%}
-{% if nginx_client_header_timeout is defined and nginx_client_header_timeout -%}
-  client_header_timeout {{ nginx_client_header_timeout }};
-{% endif -%}
-{% if nginx_client_max_body_size is defined and nginx_client_max_body_size -%}
-  client_max_body_size {{ nginx_client_max_body_size }};
-{% endif -%}
+{% if item.client_body_timeout|default(false) %}
+  client_body_timeout {{ item.client_body_timeout }};
+{% endif %}
+{% if item.client_header_timeout|default(false) %}
+  client_header_timeout {{ item.client_header_timeout }};
+{% endif %}
+{% if item.client_max_body_size|default(false) %}
+  client_max_body_size {{ item.client_max_body_size }};
+{% endif %}
 
-{% if nginx_gzip_types is defined and nginx_gzip_types-%}
-  gzip_types {{ nginx_gzip_types }};
-{% endif -%}
+{% if item.gzip_types|default(false) %}
+  gzip_types {{ item.gzip_types }};
+{% endif %}
 
-{% if nginx_index_files|default([])|count > 0 -%}
-  index {{ nginx_index_files|join(' ') }};
-{% endif -%}
+{% if item.index_files|default(false) %}
+  index    {{ item.index_files|join(' ') }};
+{% elif item.index_files is defined and item.index_files|count == 0 %}
+{# index_files is empty so do nothing #}
+{% else %}
+  index    {{ nginx_index_files|join(' ') }};
+{% endif %}
 
-  access_log            {{ nginx_ssl_access_log_real }};
-  error_log             {{ nginx_ssl_error_log_real }};
+{# *** [START] set _access_log and _error_log *** #}
+{% set _ssl_access_log  = 'ssl-' + item.vhost + '.access.log' %}
+{% if item.access_log is defined and item.access_log %}
+{% set _ssl_access_log  = 'ssl-' + item.access_log %}
+{% endif %}
 
-{% if nginx_vhost_cfg_prepend -%}
-{% for key,value in nginx_vhost_cfg_prepend|dictsort %}
+{% set _ssl_error_log   = 'ssl-' + item.vhost + '.error.log' %}
+{% if item.error_log is defined and item.error_log %}
+{% set _ssl_error_log   = 'ssl-' + item.error_log %}
+{% endif %}
+{# *** [END] set _access_log and _error_log *** #}
+
+  access_log            {{ _ssl_access_log }};
+  error_log             {{ _ssl_error_log }};
+
+{% if item.vhost_cfg_prepend|default(false) %}
+{% for key,value in item.vhost_cfg_prepend|dictsort %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
@@ -108,10 +152,10 @@ server {
   {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
+{% endif %}
 
-{% if nginx_vhost_cfg_ssl_prepend -%}
-{% for key,value in nginx_vhost_cfg_ssl_prepend|dictsort %}
+{% if item.vhost_cfg_ssl_prepend|default(false) %}
+{% for key,value in item.vhost_cfg_ssl_prepend|dictsort %}
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
@@ -121,25 +165,35 @@ server {
   {{ key }} {{ value }};
 {% endif %}
 {% endfor %}
-{% endif -%}
+{% endif %}
 
-{% for line in nginx_raw_prepend %}
+{% if item.raw_prepend|default(false) and item.raw_prepend is iterable %}
+{% for line in item.raw_prepend %}
   {{ line }}
 {% endfor %}
-{% if nginx_root -%}
-  root {{ nginx_root }};
-{% endif -%}
-{% for key,value in nginx_passenger_cgi_param|dictsort %}
+{% endif %}
+
+{% if item.www_root|default(false) -%}
+  root {{ item.www_root }};
+{% endif %}
+{% if item.passenger_cgi_param|default(false) %}
+{% for key,value in item.passenger_cgi_param|dictsort %}
   passenger_set_cgi_param  {{ key }} {{ value }};
 {% endfor %}
-{% for key,value in nginx_passenger_set_header|dictsort %}
+{% endif %}
+{% if item.passenger_set_header|default(false) %}
+{% for key,value in item.passenger_set_header|dictsort %}
   passenger_set_header  {{ key }} {{ value }};
 {% endfor %}
-{% for key,value in nginx_passenger_env_var|dictsort %}
+{% endif -%}
+{% if item.passenger_env_var|default(false) %}
+{% for key,value in item.passenger_env_var|dictsort %}
   passenger_env_var  {{ key }} {{ value }};
 {% endfor %}
-{% if nginx_add_header -%}
-{% for key,value in nginx_add_header|dictsort %}
+{% endif %}
+
+{% if item.add_header|default(false) %}
+{% for key,value in item.add_header|dictsort %}
   add_header              {{ key }} {{ value }};
 {% endfor %}
-{% endif -%}
+{% endif %}
