[OI] Fix typo in location footer and header templates

--- a/templates/vhost/location_header.j2
+++ b/templates/vhost/location_header.j2
@@ -31,10 +31,10 @@
 {# NOTE: value may only be a string or a list #}
 {% if value is not string and value is iterable%}
 {% for asubvalue in value %}
-    {{ key }} {{ asubvalue }};
+    {{ key }} {{ asubvalue }}
 {% endfor %}
 {% else %}
-    {{ key }} {{ value }};
+    {{ key }} {{ value }}
 {% endif %}
 {% endfor %}
 {% endif %}
